; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_format.c_conv_s16_to_f32.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_format.c_conv_s16_to_f32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.outbuffer = type { i32, i64, i64 }

@SHORT_SCALE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@bufsizeerr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.outbuffer*)* @conv_s16_to_f32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @conv_s16_to_f32(%struct.outbuffer* %0) #0 {
  %2 = alloca %struct.outbuffer*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64*, align 8
  %5 = alloca float*, align 8
  %6 = alloca i64, align 8
  %7 = alloca float, align 4
  store %struct.outbuffer* %0, %struct.outbuffer** %2, align 8
  %8 = load %struct.outbuffer*, %struct.outbuffer** %2, align 8
  %9 = getelementptr inbounds %struct.outbuffer, %struct.outbuffer* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to i64*
  store i64* %11, i64** %4, align 8
  %12 = load %struct.outbuffer*, %struct.outbuffer** %2, align 8
  %13 = getelementptr inbounds %struct.outbuffer, %struct.outbuffer* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to float*
  store float* %15, float** %5, align 8
  %16 = load %struct.outbuffer*, %struct.outbuffer** %2, align 8
  %17 = getelementptr inbounds %struct.outbuffer, %struct.outbuffer* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = sext i32 %18 to i64
  %20 = udiv i64 %19, 8
  store i64 %20, i64* %6, align 8
  %21 = load i32, i32* @SHORT_SCALE, align 4
  %22 = sitofp i32 %21 to double
  %23 = fdiv double 1.000000e+00, %22
  %24 = fptrunc double %23 to float
  store float %24, float* %7, align 4
  %25 = load %struct.outbuffer*, %struct.outbuffer** %2, align 8
  %26 = getelementptr inbounds %struct.outbuffer, %struct.outbuffer* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* %6, align 8
  %29 = mul i64 %28, 4
  %30 = icmp ult i64 %27, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %1
  %32 = load i32, i32* @bufsizeerr, align 4
  %33 = call i32 @error1(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %32)
  br label %60

34:                                               ; preds = %1
  %35 = load i64, i64* %6, align 8
  %36 = sub i64 %35, 1
  store i64 %36, i64* %3, align 8
  br label %37

37:                                               ; preds = %51, %34
  %38 = load i64, i64* %3, align 8
  %39 = icmp uge i64 %38, 0
  br i1 %39, label %40, label %54

40:                                               ; preds = %37
  %41 = load i64*, i64** %4, align 8
  %42 = load i64, i64* %3, align 8
  %43 = getelementptr inbounds i64, i64* %41, i64 %42
  %44 = load i64, i64* %43, align 8
  %45 = sitofp i64 %44 to float
  %46 = load float, float* %7, align 4
  %47 = fmul float %45, %46
  %48 = load float*, float** %5, align 8
  %49 = load i64, i64* %3, align 8
  %50 = getelementptr inbounds float, float* %48, i64 %49
  store float %47, float* %50, align 4
  br label %51

51:                                               ; preds = %40
  %52 = load i64, i64* %3, align 8
  %53 = add i64 %52, -1
  store i64 %53, i64* %3, align 8
  br label %37

54:                                               ; preds = %37
  %55 = load i64, i64* %6, align 8
  %56 = mul i64 %55, 4
  %57 = trunc i64 %56 to i32
  %58 = load %struct.outbuffer*, %struct.outbuffer** %2, align 8
  %59 = getelementptr inbounds %struct.outbuffer, %struct.outbuffer* %58, i32 0, i32 0
  store i32 %57, i32* %59, align 8
  br label %60

60:                                               ; preds = %54, %31
  ret void
}

declare dso_local i32 @error1(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
